reviewed the last-section

--- a/index.html
+++ b/index.html
@@ -166,10 +166,12 @@
 		<section class="last-section">
 			<img class="img-logo" src="images/logo.svg" alt="image logo" />
 			<div class="last-flex">
-				<div class="icon-location">
-					<img src="images/icon-location.svg" alt="location icon" />
-				</div>
 				<div class="lorem">
+					<img
+						class="lorm"
+						src="images/icon-location.svg"
+						alt="location icon"
+					/>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 						eiusmod tempor incididunt ut labore et dolore magna aliqua
