--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</p>
 					<img src="images/profile-1.jpg" alt="profile-1" />
 					<p class="profile-name">Satish Patel</p>
-					<p class="profile-position">Founder & CEO, Huddle</p>
+					<p>Founder & CEO, Huddle</p>
 				</div>
 				<div class="profile">
 					<p>
@@ -137,7 +137,7 @@
 					</p>
 					<img src="images/profile-2.jpg" alt="profile-2" />
 					<p class="profile-name">Bruce McKenzie</p>
-					<p class="profile-position">Founder & CEO, Huddle</p>
+					<p>Founder & CEO, Huddle</p>
 				</div>
 				<div class="profile">
 					<p>
@@ -147,7 +147,7 @@
 					</p>
 					<img src="images/profile-3.jpg" alt="profile-3" />
 					<p class="profile-name">Iva Boyd</p>
-					<p class="profile-positon">Founder & CEO, Huddle</p>
+					<p>Founder & CEO, Huddle</p>
 				</div>
 			</section>
 
