--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Flyo Landing Page</title>
+		<title>Fylo Landing Page</title>
 
 		<link
 			rel="stylesheet"
@@ -37,7 +37,7 @@
 			<section class="top-section">
 				<h1>All your files in one secure location, accessible anywhere.</h1>
 				<p>
-					Flyo stores all your most important files in one secure location.
+					Fylo stores all your most important files in one secure location.
 					Access them wherever you need, share and collaborate with friends,
 					family and co-worker.
 				</p>
